--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,9 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>BackNode Chat v0.1337</title>
 		<script type="text/javascript" src="socket.io.js"></script>
+		<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+		
+
 	</head>
 	<body style="margin: 0; padding: 0;">
 
@@ -121,6 +124,28 @@ document.onkeyup = function(e)
 		break;
 	}
 }
+
+
+function update_positions(positions) {
+	
+
+
+
+
+
+/*			<div class="char">
+				<span>adomak</span>
+				<img src="../img/down.gif" />
+			</div>*/
+
+
+
+}
+
+
+
+
+
 </script>
 		
 
@@ -182,13 +207,6 @@ body, html {
 	
 
 		<div id="field" style="display: none">
-
-
-			<div class="char">
-				<span>adomak</span>
-				<img src="../img/down.gif" />
-			</div>
-
 		</div>
 		
 	</body>
