--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
 		<title>BackNode Chat v0.1337</title>
 		<script type="text/javascript" src="socket.io.js"></script>
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-		
+
 
 	</head>
 	<body style="margin: 0; padding: 0;">
@@ -126,19 +126,23 @@ document.onkeyup = function(e)
 }
 
 
-function update_positions(positions) {
+function update_positions(users) {
 	
+	for (var i in users) {
+		
+		var user = users[i];
 
+		var char = $('#' + user.id);
 
+		if (!char.length) {
+			$('#field').append('<div class="char" id="' + user.id + '"><span></span><img src="../img/down.gif" /></div>')			
+			var char = $('#' + user.id);
+		}
 
+		var.css('top', user.y);
+		var.css('left', user.x);
 
-
-/*			<div class="char">
-				<span>adomak</span>
-				<img src="../img/down.gif" />
-			</div>*/
-
-
+	}
 
 }
 
