--- a/client/index.html
+++ b/client/index.html
@@ -359,6 +359,10 @@ body {
 	margin: 0 auto;
 	margin-top: 300px;
 }
+#splash input[type=text] {
+	width: 130px;
+}
+
 #splash h1 b {
 	font-size: 14px;
 }
